Updated README and added JAR file